# Databases

./: .gitignore  CMakeLists.txt  Databases.sln  Databases.vcxproj  Databases.vcxproj.filters  README.md
.github/workflows/: build.yml  build_hiredis.yml  build_sqlite.yml
Tests/: CMakeLists.txt  main.cpp  redis.cpp  sqlite.cpp
include/: Database.h  DatabaseFactory.h  DatabaseUtility.h  SQLResult.h  SQLValue.h  SqlValue.h  Table.h
include/Exceptions/: DatabaseException.h
include/Implementations/: RedisDatabase.h  RedisTable.h  SQLiteDatabase.h  SQLiteTable.h
include/Queries/: CreateTableQuery.h  RawQuery.h
src/: Database.cpp  Database.h  DatabaseFactory.cpp  DatabaseFactory.h  DatabaseUtility.cpp  DatabaseUtility.h  IDatabase.cpp  IDatabase.h  IDatabaseImplementation.cpp  IDatabaseImplementation.h  ITable.h  SQLResult.cpp  SQLResult.h  SQLValue.cpp  SQLValue.h  SqlResult.cpp  SqlValue.cpp  Table.cpp  Table.h
src/Exceptions/: DatabaseException.cpp  DatabaseException.h
src/Implementations/: RedisDatabase.cpp  RedisTable.cpp  SQLiteDatabase.cpp  SQLiteDatabase.h  SQLiteTable.cpp  SQLiteTable.h  SqliteDatabase.cpp
src/Queries/: CreateTableQuery.cpp  CreateTableQuery.h  IQuery.h  Query.cpp  Query.h  RawQuery.cpp
